--- a/environment.yml
+++ b/environment.yml
@@ -65,6 +65,7 @@ dependencies:
       - wandb==0.19.1
       - python-box==7.3.0
       - python-dotenv==1.0.1
-      - jax==0.4.0
+      - jax==0.4.6
       - typer==0.9.0
       - matplotlib==3.9
+      - jaxlib==0.6.0
